--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
             <version>[3.0,)</version>
         </dependency>
         <dependency>
+            <groupId>jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.13</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
